test/libsolidity/syntaxTests/storageLayoutSpecifier/literal_cast.sol
contract at layout at uint(42) { }
// ----
// UnimplementedFeatureError 1834: (0-34): Code generation is not supported for contracts with specified storage layout base.
